1.0r29 changes
    * Support v4 query with reason
    * Display reason in html interface
    * Display process name in html title

1.0r28 changes
    * Added counts to the html header
    * Added favicon from William
    * Support GeoIP display in html
    * Fixed loading backup file time issues
    * Clicking an ip in html opens a new window with ip information 

1.0r27 changes
    * Increase rlimit at startup

1.0r26 changes
    * Added debug config

1.0r25 changes
    * Support saving and reloading holddown data on startup

    * Support reload config, only some options can be reloaded

    * INJECT now sets the hard timer

1.0r24 changes
    * Fixed velocity bug with rbl queries

    * Added http write actions

    * Added http-password to control access to http write actions

1.0r23 changes
    * Added support for tracking simple velocity on holddowns

    * Added /*.html interface to all the urls

1.0r22 changes
    * Added support for different uri-ratios per exact match uri. This
      is defined in a [uri-ratios] config section using 
      "uri = hits:seconds" syntax

    * Added hard block timeout to control the max time a ip can be 
      in hold down.
    
    * Set content type to text/plain so web interface displays correctly 
      in browsers

    * Changed /connections to show connect time, last request time, and 
      number of requests

    * Changed /holddowns to show timeouts

    * Added /addrs to display addrs table

    * Added /uris to display uris table

    * Added /hosts to display hosts table

    * Added basic regression tests 

    * Fixed bug when mixing v3 and v1/v2 queries

1.0r20 changes

    * /config additions, syslog additions and fixes
    
    * httpd_put_config() has been modified to include all
      the configuration options that are relevant.

    * added some checks to determine of the minimum and maximum
      ratios were configured when sliding windows are enabled.
