@@ -2,6 +2,7 @@
     * Support v4 query with reason
     * Display reason in html interface
     * Display process name in html title
+    * Added GeoIP country to syslog
 
 1.0r28 changes
     * Added counts to the html header
